--- a/src/app/assignement/fiche-assignement/fiche-assignement.component.css
+++ b/src/app/assignement/fiche-assignement/fiche-assignement.component.css
@@ -36,3 +36,18 @@
   justify-content: space-between;
   margin-top: 20px;
 }
+
+.div-error {
+  margin-top: 20px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+.error {
+  font-size: 16px !important;
+  background-color: var(--mat-form-field-error-text-color);
+  color: black;
+  padding:15px 15px 15px 15px;
+  text-align: center;
+}
