--- a/src/app/assignement/fiche-assignement/fiche-assignement.component.html
+++ b/src/app/assignement/fiche-assignement/fiche-assignement.component.html
@@ -90,7 +90,7 @@
       <mat-divider></mat-divider>
       <div class="div-action">
         <div class="btnList">
-          <button mat-flat-button color="accent" (click)="goliste()">
+          <button mat-raised-button style="background-color: rgb(21, 46, 96);color:white" (click)="goliste()">
             <mat-icon>arrow_back</mat-icon>Retour
           </button>
         </div>
