--- a/src/app/assignement/assignement.component.html
+++ b/src/app/assignement/assignement.component.html
@@ -51,13 +51,13 @@
         <td mat-cell *matCellDef="let a">{{ a.dateRendu | date:'yyyy/MM/dd' }}</td>
       </ng-container>
   
-      <!-- <ng-container matColumnDef="info">
+      <ng-container matColumnDef="modif">
         <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let a">
-          <button mat-button color="primary" (click)="goFicheAssignement(a)">Fiche</button>
+          <button *ngIf="role === 'professeur' "mat-button color="primary" (click)="goFicheAssignement(a)"> <mat-icon >edit</mat-icon>Modifier</button>
         </td>
       </ng-container>
-   -->
+  
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
