--- a/src/app/detail-assignement/fiche-detail-assignement/fiche-detail-assignement.component.html
+++ b/src/app/detail-assignement/fiche-detail-assignement/fiche-detail-assignement.component.html
@@ -15,6 +15,9 @@
       <mat-spinner></mat-spinner>
     </div>
     } @else {
+    <mat-list style="display:flex;flex-direction: column">
+      <img style="margin-left: 20px;" src="{{detailAssignement.photoeleve?detailAssignement.photoeleve:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRetK3z-l-tvWGrJwlKrM8_7Z8PZJLOGkqD1A&usqp=CAU'}}" width="100" alt="{{detailAssignement.eleve}}">
+    </mat-list>
     <mat-list>
       <div mat-subheader>Information</div>
       @if(role === 'etudiant') {
