--- a/src/app/detail-assignement/valider-detail-assignement/valider-detail-assignement.component.html
+++ b/src/app/detail-assignement/valider-detail-assignement/valider-detail-assignement.component.html
@@ -28,20 +28,25 @@
               <mat-card class="card">
                 <mat-card-content>
                   <h3 mat-subheader>Assignement: {{ demande.assignement }}</h3>
-                  <mat-list-item>
-                    <mat-icon matListItemIcon>person</mat-icon>
-                    <div matListItemTitle>L'élève</div>
-                    <div matListItemLine class="list-desc">
-                      {{ demande.eleve }}
+                  <div style="display: flex;">
+                    <img style="margin-left: 20px;" src="{{demande.photoeleve?demande.photoeleve:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRetK3z-l-tvWGrJwlKrM8_7Z8PZJLOGkqD1A&usqp=CAU'}}" width="100" alt="{{demande.eleve}}">
+                    <div>
+                      <mat-list-item>
+                        <mat-icon matListItemIcon>person</mat-icon>
+                        <div matListItemTitle>L'élève</div>
+                        <div matListItemLine class="list-desc">
+                          {{ demande.eleve }}
+                        </div>
+                      </mat-list-item>
+                      <mat-list-item>
+                        <mat-icon matListItemIcon>date_range</mat-icon>
+                        <div matListItemTitle>La date du rendu du devoir</div>
+                        <div matListItemLine class="list-desc">
+                          {{ demande.dateRenduEleve | date : "dd/MM/yy" }}
+                        </div>
+                      </mat-list-item>
                     </div>
-                  </mat-list-item>
-                  <mat-list-item>
-                    <mat-icon matListItemIcon>date_range</mat-icon>
-                    <div matListItemTitle>La date du rendu du devoir</div>
-                    <div matListItemLine class="list-desc">
-                      {{ demande.dateRenduEleve | date : "dd/MM/yy" }}
-                    </div>
-                  </mat-list-item>
+                  </div>
                 </mat-card-content></mat-card
               >
             </div>
@@ -66,20 +71,25 @@
                 <mat-card class="card">
                     <mat-card-content>
                       <h3 mat-subheader>Assignement: {{ demande.assignement }}</h3>
-                      <mat-list-item>
-                        <mat-icon matListItemIcon>person</mat-icon>
-                        <div matListItemTitle>L'élève</div>
-                        <div matListItemLine class="list-desc">
-                          {{ demande.eleve }}
+                      <div style="display: flex;">
+                        <img style="margin-left: 20px;" src="{{demande.photoeleve?demande.photoeleve:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRetK3z-l-tvWGrJwlKrM8_7Z8PZJLOGkqD1A&usqp=CAU'}}" width="100" alt="{{demande.eleve}}">
+                        <div>
+                          <mat-list-item>
+                            <mat-icon matListItemIcon>person</mat-icon>
+                            <div matListItemTitle>L'élève</div>
+                            <div matListItemLine class="list-desc">
+                              {{ demande.eleve }}
+                            </div>
+                          </mat-list-item>
+                          <mat-list-item>
+                            <mat-icon matListItemIcon>date_range</mat-icon>
+                            <div matListItemTitle>La date du rendu du devoir</div>
+                            <div matListItemLine class="list-desc">
+                              {{ demande.dateRenduEleve | date : "dd/MM/yy" }}
+                            </div>
+                          </mat-list-item>
                         </div>
-                      </mat-list-item>
-                      <mat-list-item>
-                        <mat-icon matListItemIcon>date_range</mat-icon>
-                        <div matListItemTitle>La date du rendu du devoir</div>
-                        <div matListItemLine class="list-desc">
-                          {{ demande.dateRenduEleve | date : "dd/MM/yy" }}
-                        </div>
-                      </mat-list-item>
+                      </div>
                     </mat-card-content></mat-card>
                 } @else if(listeAAprrouve.length == 1){
             <mat-card class="card">
