--- a/src/app/assignement/fiche-assignement/fiche-assignement.component.css
+++ b/src/app/assignement/fiche-assignement/fiche-assignement.component.css
@@ -61,3 +61,43 @@
   padding:15px 15px 15px 15px;
   text-align: center;
 }
+
+p{
+  margin-left: 20px;
+  margin-top: 5px;
+}
+
+.images-container {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 0;
+}
+
+.image-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 45%;
+}
+
+.image {
+  width: 100px;
+  height: 100px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px;
+}
+
+.image-text {
+  font-size: 16px;
+  font-weight: 500;
+  color: #333;
+}
+
+.edit-icon {
+  height: 50px;
+  width: 30px;
+  font-size: 30px;
+  margin-right: -10px;
+  color: dimgrey;
+}
