--- a/src/app/assignement/fiche-assignement/modifier-assignment/modifier-assignment.component.css
+++ b/src/app/assignement/fiche-assignement/modifier-assignment/modifier-assignment.component.css
@@ -4,6 +4,13 @@
     margin:5px;
   }
 
+.mat-mdc-progress-spinner {
+  width: 30px !important;
+  height: 30px !important;
+  margin-left: 40%;
+  margin-top: 160px;
+}
+
 .mat-mdc-raised-button:not(:disabled){
     background-color: rgb(21, 46, 96) !important;
     color: white !important;
