--- a/src/app/professeur/matiere/add-matiere/add-matiere.component.css
+++ b/src/app/professeur/matiere/add-matiere/add-matiere.component.css
@@ -83,6 +83,7 @@
     font-size: 14px !important;
     background-color: var(--mat-form-field-error-text-color);
     color: black;
-    padding: 5px 5px 5px 5px;
+    padding: 5px 15px 5px 15px;
+    margin-top: 40px;
   }
   
