--- a/src/app/professeur/matiere/matiere.component.html
+++ b/src/app/professeur/matiere/matiere.component.html
@@ -41,7 +41,7 @@
       <ng-container matColumnDef="assignement">
         <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let a">
-          <button mat-button color="warn" (click)="ajoutAssignement(a)">Ajouter un assignement</button>
+          <button mat-button color="warn" style="color:#cc0000" (click)="voirAssignement(a)">Voir la liste des assignements<mat-icon>list</mat-icon></button>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
