--- a/src/app/eleve/devoir-tri/devoir-tri.component.html
+++ b/src/app/eleve/devoir-tri/devoir-tri.component.html
@@ -45,7 +45,7 @@
                     </mat-form-field>
 
                     <mat-form-field class="full-width white">
-                      <mat-label>Deadline</mat-label>
+                      <mat-label>Date d'échéance</mat-label>
                       <mat-select [(ngModel)]="ordreValue" name="ordre" (selectionChange)="onChangeOrdre($event.value)">
                           <mat-option [value]="">Par défaut</mat-option>
                           <mat-option [value]="1"><mat-icon class="mat-icon-color-green">trending_up</mat-icon>Croissant</mat-option>
