--- a/src/app/detail-assignement/valider-detail-assignement/valider-detail-assignement.component.html
+++ b/src/app/detail-assignement/valider-detail-assignement/valider-detail-assignement.component.html
@@ -27,7 +27,7 @@
             <div *ngFor="let demande of listeNonApprouve" cdkDrag>
               <mat-card class="card">
                 <mat-card-content>
-                  <h3 mat-subheader>Assignement: {{ demande.assignement }}</h3>
+                  <h3 mat-subheader> {{ demande.assignement }}</h3>
                   <div style="display: flex;">
                     <img style="margin-left: 20px;" src="{{demande.photoeleve?demande.photoeleve:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRetK3z-l-tvWGrJwlKrM8_7Z8PZJLOGkqD1A&usqp=CAU'}}" width="100" alt="{{demande.eleve}}">
                     <div>
@@ -70,7 +70,7 @@
             @if(demande.assignement){
                 <mat-card class="card">
                     <mat-card-content>
-                      <h3 mat-subheader>Assignement: {{ demande.assignement }}</h3>
+                      <h3 mat-subheader> {{ demande.assignement }}</h3>
                       <div style="display: flex;">
                         <img style="margin-left: 20px;" src="{{demande.photoeleve?demande.photoeleve:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRetK3z-l-tvWGrJwlKrM8_7Z8PZJLOGkqD1A&usqp=CAU'}}" width="100" alt="{{demande.eleve}}">
                         <div>
