--- a/src/app/eleve/devoir-tri/devoir-tri.component.html
+++ b/src/app/eleve/devoir-tri/devoir-tri.component.html
@@ -14,7 +14,7 @@
           <div class="filtre">
             <mat-list>
               <div mat-subheader>Filtre : </div>
-              <div style="display: flex; flex-wrap: wrap; margin-bottom: 20px">
+              <div style="display: flex; justify-content: center;flex-direction: row; margin-bottom: 20px">
                 <form>
                   <div style="display: flex; justify-content: space-between;">
                     <mat-form-field class="full-width white">
