--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -7,7 +7,7 @@
         </button>
         <span>Gestion des Assignements</span>
         <span class="example-spacer"></span>
-        <button [matMenuTriggerFor]="profile" mat-button>  <mat-icon style="font-size:30px;height: 40px;width: 40px;">person</mat-icon></button>
+        <button [matMenuTriggerFor]="profile" mat-button>  <mat-icon style="font-size:30px;height: 40px;width: 40px;">person</mat-icon> {{utilisateur.nom}} {{utilisateur.prenom}}</button>
         <mat-menu #profile="matMenu">
             <button  mat-menu-item routerLink="profile">Profile</button>
             <button  mat-menu-item (click)="onDeconnecter()">Se déconnecter</button>
