--- a/src/app/utilisateur/utilisateur.component.css
+++ b/src/app/utilisateur/utilisateur.component.css
@@ -1,41 +1,47 @@
-.mat-mdc-list-item-icon {
-    color: rgba(0, 0, 0, 0.54);
-  }
-  
-  .mat-mdc-card-content {
-    text-align: initial !important;
-  }
-  
-  .mat-mdc-progress-spinner {
-    width: 30px !important;
-    height: 30px !important;
-    margin-left: 40%;
-    margin-top: 160px;
-  }
-  
-  .mat-mdc-card {
-    min-height: 400px;
-  }
-  
+.profile-card {
+  max-width: 600px;
+  margin: 20px auto;
+  border-radius: 8px;
+}
 
-  .list-item-title {
-    text-align: left; /* Alignement du texte "Nom" à gauche */
-    width: 100px; /* Largeur fixe pour le texte "Nom" */
-  }
-  
-  
-  .list-desc {
-    white-space: pre-wrap;
-  }
-  
-  
-  .mat-mdc-list-item.mdc-list-item--with-leading-icon.mdc-list-item--with-two-lines {
-      height: auto !important;
-  }
-  
-  .div-action{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 20px;
-  }
+.profile-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+}
+
+.profile-info h3 {
+  text-decoration: underline;
+  margin-bottom: 20px;
+}
+
+.profile-image {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  margin-bottom: 20px;
+}
+
+.profile-details {
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 50px;
+}
+
+.list-item-title {
+  width: 150px;
+}
+
+.mdc-card__actions {
+  display: flex;
+  justify-content: center;
+  padding: 16px;
+  margin-bottom: 20px;
+  margin-top: -10px;
+}
+
+
