--- a/src/app/utilisateur/utilisateur.component.html
+++ b/src/app/utilisateur/utilisateur.component.html
@@ -1,33 +1,29 @@
-<mat-card>
+<mat-card class="profile-card">
   <mat-card-header>
-    <mat-card-title>Profile {{ type_user }}</mat-card-title>
+    <mat-card-title>Profil {{ type_user }}</mat-card-title>
   </mat-card-header>
 
   <mat-card-content>
-    <mat-list >
-        <div style="display: flex; flex-direction: column; margin-bottom: 20px; align-items: center; justify-content: center; text-align: left;">
-      <div style="display: flex; flex-direction: column; margin-bottom: 20px; align-items: flex-start;">
-        <h3  style="padding-left: 50px; text-decoration: underline;"> Information</h3>
-       <img style="margin-left: 50px;" src="{{utilisateur.photo ? utilisateur.photo :'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRetK3z-l-tvWGrJwlKrM8_7Z8PZJLOGkqD1A&usqp=CAU'}}" width="100" alt="Description_de_votre_image">
-        <div style="margin-top: 30px;" >
+    <mat-list>
+      <div class="profile-container">
+        <h3>Information</h3>
+        <img class="profile-image" src="{{ utilisateur.photo ? utilisateur.photo : 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRetK3z-l-tvWGrJwlKrM8_7Z8PZJLOGkqD1A&usqp=CAU' }}" alt="Description de votre image">
+        <div class="profile-details">
           <mat-list-item>
             <mat-icon matListItemIcon>face</mat-icon>
             <div matListItemTitle class="list-item-title">Nom</div>
-            <div matListItemLine class="list-desc">
-              {{ utilisateur.nom}} {{ utilisateur.prenom ? " "+utilisateur.prenom :""}}
-            </div>
+            <div matListItemLine class="list-desc">{{ utilisateur.nom }} {{ utilisateur.prenom ? " " + utilisateur.prenom : "" }}</div>
+          </mat-list-item>
+          <mat-list-item>
+            <mat-icon matListItemIcon>alternate_email</mat-icon>
+            <div matListItemTitle class="list-item-title">Adresse électronique</div>
+            <div matListItemLine class="list-desc">{{ utilisateur.email }}</div>
           </mat-list-item>
         </div>
-        <div>
-            <mat-list-item>
-              <mat-icon matListItemIcon>alternate_email</mat-icon>
-              <div matListItemTitle class="list-item-title">Adresse éléctronique</div>
-              <div matListItemLine class="list-desc">
-                {{ utilisateur.email}} 
-              </div>
-            </mat-list-item>
-          </div>
-      </div></div>
+      </div>
     </mat-list>
   </mat-card-content>
+  <mat-card-actions class="center-actions">
+    <button mat-raised-button color="primary" style="background-color: darkred;" (click)="editProfile()">Éditer le Profil</button>
+  </mat-card-actions>
 </mat-card>
